welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:18: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFaceMur()){
    ^SnakeBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
    if(estFaceMur()){
    ^